# evm-debugger

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
src/: app_state.rs  deps.rs  executor.rs  fetcher.rs  fs_utils.rs  inspector.rs  lib.rs  main.rs  rpc_url.rs  server.rs  session.rs  session_service.rs  trace_cache.rs  types.rs  ui.rs
static/: index.html
ui/: README.md
