[package]
name = "evm-debugger"
version = "0.1.0"
edition = "2021"
default-run = "evm-debugger"

[[bin]]
name = "evm-debugger"
path = "src/main.rs"

[dependencies]
revm             = { version = "34.0.0", features = ["std", "serde", "optional_balance_check"] }
revm-database    = { version = "10.0.0", features = ["std", "alloydb"] }
revm-inspector   = { version = "15.0.0", features = ["std"] }
revm-context     = { version = "13.0.0", features = ["std", "serde"] }

# RPC - match versions used by revm workspace
alloy-provider   = { version = "1.4.2", features = ["reqwest"] }
alloy-rpc-client = { version = "1.4.2", features = ["reqwest"] }
alloy-transport  = { version = "1.4.2" }
alloy-eips       = { version = "1.4.2" }
alloy-primitives = { version = "1.5.2", features = ["serde"] }
alloy-consensus  = { version = "1.4.2" }
url              = "2"

# HTTP
axum             = { version = "0.7", features = ["json"] }
tower-http       = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio            = { version = "1", features = ["full"] }

# Utilities
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
anyhow           = "1"
dashmap          = "6"
uuid             = { version = "1", features = ["v4"] }
hex              = "0.4"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy          = "0.15"
webbrowser       = "1"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
